[gd_scene load_steps=13 format=3 uid="uid://crkwepqpy2rai"]

[ext_resource type="Texture2D" uid="uid://b6ybt0xk6d48v" path="res://assets/kenney_new-platformer-pack-1.0/Spritesheets/spritesheet-characters-default.png" id="1_elqb8"]
[ext_resource type="Script" uid="uid://i3fgwo8koevl" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="AudioStream" uid="uid://cu47kgrmd6c3x" path="res://assets/kenney_new-platformer-pack-1.0/Sounds/sfx_hurt.ogg" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://bud2pvy17e5ge" path="res://assets/kenney_new-platformer-pack-1.0/Sounds/sfx_jump.ogg" id="4_dqkch"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rarhs"]
atlas = ExtResource("1_elqb8")
region = Rect2(128, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_elqb8")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_elqb8")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_elqb8")
region = Rect2(512, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_elqb8")
region = Rect2(512, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_elqb8")
region = Rect2(512, 512, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_vcsgt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rarhs")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_elqb8"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_g2els")
JUMP_VELOCITY = -800.0
max_health = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_vcsgt")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.168247

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -46)
scale = Vector2(3.5, 2.8)
shape = SubResource("CapsuleShape2D_elqb8")

[node name="SfxHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[node name="IFramesTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]

[node name="SfxJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[connection signal="timeout" from="IFramesTimer" to="." method="_on_i_frames_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
